--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<label><i class="fa fa-user ico" aria-hidden="true"></i> Username :<br><input type="username" class="input-field" required></label><br>
 						<label><i class="fa fa-lock ico" aria-hidden="true"></i> Password :<input type="password" class="input-field" required></label><br>
 						<label><i class="fa fa-mobile ico" aria-hidden="true"></i> Mobile :<input type="text" pattern="[0-9]+" class="input-field" required></label><br>
-					<button type="submit" class="submit-btn" href="#">Log In</button> 
+					<button type="submit" class="submit-btn" href="instructiompagefinal.html">Log In</button> 
 					<p class="sign">Not Signed Up ? <a class="su" href="#"> Click Here</a> </p>
 				</form>
 				<div class="limg">
