--- a/our team.html
+++ b/our team.html
@@ -87,7 +87,7 @@
 
         <div class="row mt-3">
 
-          <div class="col-sm-3  col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col1 col-sm-3  col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card cardd ">
               <img class="card-img-top" src="ravi.jpg" alt="Card image cap">
               <div id="NAME" class=" row name mt-1 text-row">
@@ -106,7 +106,7 @@
             </div>
 
           </div>
-          <div class="col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col1 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card cardd ">
               <img class="card-img-top" src="shashwat.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
@@ -123,7 +123,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col1 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card  cardd">
               <img class="card-img-top" src="kanchan.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
@@ -139,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col1 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card cardd ">
               <img class="card-img-top" src="avantika.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
@@ -168,11 +168,11 @@
 
         <div class="row mt-3 mb-4">
 
-          <div class="col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col2 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card cardd ">
               <img class="card-img-top" src="sarthak.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
-                <div id="n" class="col-9 text-col pb-1">
+                <div  class="col-9 text-col pb-1">
                   Sarthak Deshpande
                 </div>
               </div>
@@ -183,7 +183,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col2 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card cardd ">
               <img class="card-img-top" src="ruchhita.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
@@ -200,7 +200,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col2 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card  cardd">
               <img class="card-img-top" src="apurva.jpg" alt="Card image cap">
               <div class="name mt-1 row text-row">
@@ -217,7 +217,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col2 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card  cardd">
               <img class="card-img-top" src="aryan.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
@@ -235,7 +235,7 @@
             </div>
 
           </div>
-          <div class=" col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col2 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card cardd">
               <img class="card-img-top" src="divya.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
@@ -253,7 +253,7 @@
             </div>
 
           </div>
-          <div class=" col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col2 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card cardd ">
               <img class="card-img-top" src="umakant.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
@@ -271,7 +271,7 @@
             </div>
 
           </div>
-          <div class=" col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
+          <div class="col2 col-sm-3 col-10 ml-sm-0 ml-4 mt-sm-0 mt-4">
             <div class="card cardd ">
               <img class="card-img-top" src="sakshi.jpeg" alt="Card image cap">
               <div class="name mt-1 row text-row">
